<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff" >

        <LinearLayout 
         android:layout_width="fill_parent"
    	 android:layout_height="wrap_content"
    	 android:orientation="vertical" 
        >
        <ImageView 
        android:src="@drawable/img_01"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        android:id="@+id/img1"
        />
	    <TextView 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:textColor="#000000"
	    	android:id="@+id/txt1"
	    	android:gravity="center_horizontal"
	    	android:text="@string/txt1"
	        />
	    <ImageView 
	        android:src="@drawable/img_02"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	        android:id="@+id/img2"
	        />
	     <TextView 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:id="@+id/txt2"
	    	android:textColor="#000000"
	    	android:gravity="center_horizontal"
	    	android:text="@string/txt2"
	        />
	    <ImageView 
	        android:src="@drawable/img_03"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	        android:id="@+id/img3"
	        />
	     <TextView 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:id="@+id/txt3"
	    	android:textColor="#000000"
	    	android:gravity="center_horizontal"
	    	android:text="@string/txt3"
	        />
	    <ImageView 
	        android:src="@drawable/img_05"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	        android:id="@+id/img4"
	        />
	     <TextView 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:id="@+id/txt4"
	    	android:textColor="#000000"
	    	android:gravity="center_horizontal"
	    	android:text="@string/txt4"
	        />
	    <ImageView 
	        android:src="@drawable/img_06"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	        android:id="@+id/img5"
	        />
	     <TextView 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:id="@+id/txt5"
	    	android:textColor="#000000"
	    	android:gravity="center_horizontal"
	    	android:text="@string/txt5"
	        />
	    <ImageView 
	        android:src="@drawable/img_07"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	        android:id="@+id/img6"
	        />
	     <TextView 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:id="@+id/txt6"
	    	android:textColor="#000000"
	    	android:gravity="center_horizontal"
	    	android:text="@string/txt6"
	        />
	    <ImageView 
	        android:src="@drawable/img_08"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	        android:id="@+id/img7"
	        />
	     <TextView 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:id="@+id/txt7"
	    	android:textColor="#000000"
	    	android:gravity="center_horizontal"
	    	android:text="@string/txt7"
	        />
	     <ImageView 
	        android:src="@drawable/img_09"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	        android:id="@+id/img8"
	        />
	     <TextView 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:id="@+id/txt8"
	    	android:textColor="#000000"
	    	android:gravity="center_horizontal"
	    	android:text="@string/txt8"
	        />
	     <ImageView 
	        android:src="@drawable/img_10"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	        android:id="@+id/img9"
	        />
	     <TextView 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:id="@+id/txt9"
	    	android:textColor="#000000"
	    	android:gravity="center_horizontal"
	    	android:text="@string/txt9"
	        />
	        
    </LinearLayout>
    
    

</ScrollView>