<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        >
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="33sp"
        android:gravity="center"
        android:id="@+id/head"
        android:text="@string/MainTop" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
         >
        
        <LinearLayout 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
            >
            <ImageView 
		        android:src="@drawable/ic_launcher1"
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_gravity="center"
		    	android:scaleType="fitXY"
		        android:id="@+id/TopAttraction"
		        />
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:id="@+id/topAttractionText"
    			android:text="@string/topattraction"
    			android:gravity="center"
                />
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
            >
		    <ImageView 
		        android:src="@drawable/ic_launcher2"
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_gravity="center"
		        android:id="@+id/EventCalendar"
		        android:scaleType="fitXY"
		        />
		    <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:id="@+id/calendarText"
    			android:text="@string/calendar"
    			android:gravity="center"
                />
	    </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        >
        <LinearLayout 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
            >
		    <ImageView 
		        android:src="@drawable/ic_launcher3"
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_gravity="center"
		    	android:scaleType="fitXY"
		        android:id="@+id/Hotel"
		        />
		    <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:id="@+id/hotelText"
    			android:text="@string/hotel"
    			android:gravity="center"
                />
		</LinearLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
            >
		    <ImageView 
		        android:src="@drawable/ic_launcher4"
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_gravity="center"
		    	android:scaleType="fitXY"
		        android:id="@+id/EatShop"
		        />
		    <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:id="@+id/restaurantText"
    			android:text="@string/restaurant"
    			android:gravity="center"
                />
		</LinearLayout>
	    
    </LinearLayout>
    

</LinearLayout>