<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical"
    >

    
    <ScrollView 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/scroll"
        >
        <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#ffffff"
	    android:orientation="vertical"
	    android:id="@+id/out"
        >
        <VideoView 
            
		android:id="@+id/video"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		/>
        <ImageView 
        android:src="@drawable/ic_launcher"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/img"
        />
	    <TextView 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:id="@+id/text"
	    	android:textColor="#000000"
	        />
	    <LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/linkstyle"
	    	android:id="@+id/linear"
	    	android:orientation="vertical"
	        >
	        <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/txt98"
		        android:padding="10px"
		        android:textColor="#FF0000"
	            />
	   	 </LinearLayout>
	   	 <LinearLayout 
	   	     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:background="#ffffff"
		     android:orientation="vertical"
		     android:id="@+id/fastlayout"
	   	     >
		   	 <TextView 
		   	     android:layout_width="fill_parent"
		    	 android:layout_height="wrap_content"
		    	 android:text="@string/txt97"
		    	 android:textColor="#FF0000"
		    	 android:id="@+id/facts"
		   	     />
	   	 </LinearLayout>
	   	 <LinearLayout 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:id="@+id/commentlayout"
	        >
	        <TextView 
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/comments"
			    android:textColor="#FF0000"
			    android:id="@+id/commenttextview"
		        />
		    <Button 
		         android:layout_width="match_parent"
		    	 android:layout_height="wrap_content"
		    	 android:id="@+id/button"
		    	 android:background="#1E90FF"
		    	 android:text="@string/rate"
		    	 android:textSize="18dip"
		    	 android:textColor="#000000"
		        />
	    </LinearLayout>
	    <ListView 
		    android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
		    android:id="@+id/commentslist"
		    android:background="#ffffff"
		    ></ListView>
    	</LinearLayout>
    </ScrollView>
    
    
</LinearLayout>