<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:paddingLeft="10px"
    android:paddingRight="10px"
     >

    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/comments"
    	android:textSize="20dip"
    	android:textColor="#000000"
        />
    <LinearLayout 
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
        >
        <Button 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/circle"
	    	android:id="@+id/score1"
	    	android:paddingLeft="10px"
	        />
	    <Button 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/circle"
	    	android:id="@+id/score2"
	    	android:paddingLeft="10px"
	        />
	    <Button 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/circle"
	    	android:id="@+id/score3"
	    	android:paddingLeft="10px"
	        />
	    <Button 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/circle"
	    	android:id="@+id/score4"
	    	android:paddingLeft="10px"
	        />
	    <Button 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/circle"
	    	android:id="@+id/score5"
	    	android:paddingLeft="10px"
	        />
	    <TextView 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:id="@+id/score"
	    	android:textSize="30dip"
	    	android:textColor="#000000"
	    	android:text="0"
	    	android:paddingLeft="10px"
	        />
    </LinearLayout>
    
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/comment"
    	android:textSize="15dip"
    	android:textColor="#000000"
        />
    <EditText 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/connent"
        />
    <LinearLayout 
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
        >
	    <LinearLayout 
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:gravity="left"
		    android:id="@+id/okleft"
	        >
	        <Button 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="#1E90FF"
	    	android:text="@string/ok"
	    	android:id="@+id/ok"
	    	android:textSize="15dip"
	        />
	    </LinearLayout>
        <LinearLayout 
             android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:orientation="horizontal"
		     android:gravity="right"
		     android:id="@+id/cancleright"
             >
            <Button 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="#1E90FF"
	    	android:text="@string/cancle"
	    	android:id="@+id/cancle"
	    	android:textSize="15dip"
        />
         </LinearLayout>
        
    </LinearLayout>
    

</LinearLayout>